fml-processor/antlr/FmlMappingParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FmlMapping.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

// Disable the warning for CLSCompliant
#pragma warning disable 3021

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FmlMappingParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, NULL_LITERAL=89, BOOL=90, DATE=91, DATETIME=92, TIME=93, LONGNUMBER=94, 
		DECIMAL=95, INTEGER=96, ID=97, IDENTIFIER=98, DELIMITEDIDENTIFIER=99, 
		STRING=100, DOUBLE_QUOTED_STRING=101, TRIPLE_QUOTED_STRING_LITERAL=102, 
		WS=103, COMMENT=104, METADATA_PREFIX=105, LINE_COMMENT=106;
	public const int
		RULE_structureMap = 0, RULE_conceptMapDeclaration = 1, RULE_conceptMapPrefix = 2, 
		RULE_conceptMapCodeMap = 3, RULE_conceptMapSource = 4, RULE_conceptMapTarget = 5, 
		RULE_code = 6, RULE_mapDeclaration = 7, RULE_metadataDeclaration = 8, 
		RULE_markdownLiteral = 9, RULE_url = 10, RULE_identifier = 11, RULE_structureDeclaration = 12, 
		RULE_constantDeclaration = 13, RULE_groupDeclaration = 14, RULE_parameters = 15, 
		RULE_parameter = 16, RULE_mapRules = 17, RULE_typeMode = 18, RULE_extends = 19, 
		RULE_typeIdentifier = 20, RULE_mapRule = 21, RULE_mapTransformationRule = 22, 
		RULE_identityFieldList = 23, RULE_ruleName = 24, RULE_ruleSources = 25, 
		RULE_ruleSource = 26, RULE_ruleTargets = 27, RULE_ruleTarget = 28, RULE_sourceCardinality = 29, 
		RULE_upperBound = 30, RULE_qualifiedIdentifier = 31, RULE_sourceDefault = 32, 
		RULE_alias = 33, RULE_whereClause = 34, RULE_checkClause = 35, RULE_log = 36, 
		RULE_dependentExpression = 37, RULE_importDeclaration = 38, RULE_transform = 39, 
		RULE_groupInvocation = 40, RULE_groupParamList = 41, RULE_groupParam = 42, 
		RULE_fpExpression = 43, RULE_fpTerm = 44, RULE_fpInvocation = 45, RULE_fpExternalConstant = 46, 
		RULE_fpFunction = 47, RULE_fpSortArgument = 48, RULE_fpParamList = 49, 
		RULE_fpTypeSpecifier = 50, RULE_constant = 51, RULE_sourceListMode = 52, 
		RULE_targetListMode = 53, RULE_groupTypeMode = 54, RULE_modelMode = 55, 
		RULE_parameterMode = 56, RULE_literal = 57, RULE_fpQuantity = 58;
	public static readonly string[] ruleNames = {
		"structureMap", "conceptMapDeclaration", "conceptMapPrefix", "conceptMapCodeMap", 
		"conceptMapSource", "conceptMapTarget", "code", "mapDeclaration", "metadataDeclaration", 
		"markdownLiteral", "url", "identifier", "structureDeclaration", "constantDeclaration", 
		"groupDeclaration", "parameters", "parameter", "mapRules", "typeMode", 
		"extends", "typeIdentifier", "mapRule", "mapTransformationRule", "identityFieldList", 
		"ruleName", "ruleSources", "ruleSource", "ruleTargets", "ruleTarget", 
		"sourceCardinality", "upperBound", "qualifiedIdentifier", "sourceDefault", 
		"alias", "whereClause", "checkClause", "log", "dependentExpression", "importDeclaration", 
		"transform", "groupInvocation", "groupParamList", "groupParam", "fpExpression", 
		"fpTerm", "fpInvocation", "fpExternalConstant", "fpFunction", "fpSortArgument", 
		"fpParamList", "fpTypeSpecifier", "constant", "sourceListMode", "targetListMode", 
		"groupTypeMode", "modelMode", "parameterMode", "literal", "fpQuantity"
	};

	private static readonly string[] _LiteralNames = {
		null, "'conceptmap'", "'{'", "'}'", "'prefix'", "'='", "'-'", "':'", "'map'", 
		"'as'", "'contains'", "'in'", "'is'", "'asc'", "'desc'", "'sort'", "'uses'", 
		"'alias'", "'let'", "';'", "'group'", "'('", "','", "')'", "'<<'", "'>>'", 
		"'extends'", "'->'", "'..'", "'*'", "'imports'", "'source'", "'target'", 
		"'types'", "'where'", "'check'", "'div'", "'first'", "'last'", "'.'", 
		"'default'", "'log'", "'then'", "'['", "']'", "'+'", "'/'", "'mod'", "'&'", 
		"'|'", "'<='", "'<'", "'>'", "'>='", "'~'", "'!='", "'!~'", "'and'", "'or'", 
		"'xor'", "'implies'", "'$this'", "'$index'", "'$total'", "'%'", "'not_first'", 
		"'not_last'", "'only_one'", "'share'", "'single'", "'type+'", "'queried'", 
		"'produced'", "'year'", "'month'", "'week'", "'day'", "'hour'", "'minute'", 
		"'second'", "'millisecond'", "'years'", "'months'", "'weeks'", "'days'", 
		"'hours'", "'minutes'", "'seconds'", "'milliseconds'", null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'/// '"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "NULL_LITERAL", "BOOL", "DATE", "DATETIME", 
		"TIME", "LONGNUMBER", "DECIMAL", "INTEGER", "ID", "IDENTIFIER", "DELIMITEDIDENTIFIER", 
		"STRING", "DOUBLE_QUOTED_STRING", "TRIPLE_QUOTED_STRING_LITERAL", "WS", 
		"COMMENT", "METADATA_PREFIX", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FmlMapping.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FmlMappingParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FmlMappingParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FmlMappingParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StructureMapContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FmlMappingParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MetadataDeclarationContext[] metadataDeclaration() {
			return GetRuleContexts<MetadataDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetadataDeclarationContext metadataDeclaration(int i) {
			return GetRuleContext<MetadataDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapDeclarationContext[] conceptMapDeclaration() {
			return GetRuleContexts<ConceptMapDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapDeclarationContext conceptMapDeclaration(int i) {
			return GetRuleContext<ConceptMapDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MapDeclarationContext mapDeclaration() {
			return GetRuleContext<MapDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructureDeclarationContext[] structureDeclaration() {
			return GetRuleContexts<StructureDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructureDeclarationContext structureDeclaration(int i) {
			return GetRuleContext<StructureDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclarationContext[] importDeclaration() {
			return GetRuleContexts<ImportDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclarationContext importDeclaration(int i) {
			return GetRuleContext<ImportDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclarationContext[] constantDeclaration() {
			return GetRuleContexts<ConstantDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclarationContext constantDeclaration(int i) {
			return GetRuleContext<ConstantDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupDeclarationContext[] groupDeclaration() {
			return GetRuleContexts<GroupDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupDeclarationContext groupDeclaration(int i) {
			return GetRuleContext<GroupDeclarationContext>(i);
		}
		public StructureMapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structureMap; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.EnterStructureMap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.ExitStructureMap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmlMappingVisitor<TResult> typedVisitor = visitor as IFmlMappingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStructureMap(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StructureMapContext structureMap() {
		StructureMapContext _localctx = new StructureMapContext(Context, State);
		EnterRule(_localctx, 0, RULE_structureMap);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 118;
					metadataDeclaration();
					}
					} 
				}
				State = 123;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 127;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 124;
					conceptMapDeclaration();
					}
					} 
				}
				State = 129;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 131;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 130;
				mapDeclaration();
				}
			}

			State = 136;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 133;
					structureDeclaration();
					}
					} 
				}
				State = 138;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			State = 142;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 139;
					importDeclaration();
					}
					} 
				}
				State = 144;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			State = 148;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 145;
					constantDeclaration();
					}
					} 
				}
				State = 150;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			State = 152;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 151;
				groupDeclaration();
				}
				}
				State = 154;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__19 );
			State = 156;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConceptMapDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UrlContext url() {
			return GetRuleContext<UrlContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapPrefixContext[] conceptMapPrefix() {
			return GetRuleContexts<ConceptMapPrefixContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapPrefixContext conceptMapPrefix(int i) {
			return GetRuleContext<ConceptMapPrefixContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapCodeMapContext[] conceptMapCodeMap() {
			return GetRuleContexts<ConceptMapCodeMapContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConceptMapCodeMapContext conceptMapCodeMap(int i) {
			return GetRuleContext<ConceptMapCodeMapContext>(i);
		}
		public ConceptMapDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conceptMapDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.EnterConceptMapDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.ExitConceptMapDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmlMappingVisitor<TResult> typedVisitor = visitor as IFmlMappingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConceptMapDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConceptMapDeclarationContext conceptMapDeclaration() {
		ConceptMapDeclarationContext _localctx = new ConceptMapDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_conceptMapDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158;
			Match(T__0);
			State = 159;
			url();
			State = 160;
			Match(T__1);
			State = 162;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 161;
				conceptMapPrefix();
				}
				}
				State = 164;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__3 );
			State = 167;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 166;
				conceptMapCodeMap();
				}
				}
				State = 169;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ID );
			State = 171;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConceptMapPrefixContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(FmlMappingParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UrlContext url() {
			return GetRuleContext<UrlContext>(0);
		}
		public ConceptMapPrefixContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conceptMapPrefix; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.EnterConceptMapPrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmlMappingListener typedListener = listener as IFmlMappingListener;
			if (typedListener != null) typedListener.ExitConceptMapPrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmlMappingVisitor<TResult> typedVisitor = visitor as IFmlMappingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConceptMapPrefix(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConceptMapPrefixContext conceptMapPrefix() {
		ConceptMapPrefixContext _localctx = new ConceptMapPrefixContext(Context, State);
		EnterRule(_localctx, 4, RULE_conceptMapPrefix);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			Match(T__3);
			State = 174;
			Match(ID);
			State = 175;
			Match(T__4);
			State = 176;
			url();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
